reindented files with two spaces